# extended-mortal-engine

./: CMakeLists.txt  README.md  extended-mortal-engine.pro  main.cpp  numberofprecedinglettersiseven.cpp  numberofprecedinglettersiseven.h  reduplicator.cpp  reduplicator.h
working-directory/: extended-model.xml
